Main test creation of components and comp_model
- added doc folder
- moved custom exception to a dedicated file
- created a project_standard file with reminders for clean code
- commented core, models, windows
- renamed nodes to components
- wrote tests and tested components and comp_model
- added some methods to components

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ models/__pycache__/
 tests/test_models/__init__.py
 
 tests/test_models/__pycache__/
+
+__pycache__/
+
+core/components/__init__.py
