Implemented Component Editor and small refactoring
Moved:
- initial model components creation in CompModel._init_base_components
- page creation in MainWindow._generate_pages
- actions addition in MainWindow._add_actions
- models generation in MainWindow._generate_models
- actions inside the component page

Implemented:
- PageTemplate class for creating pages
- Component page
- Node editor

Changed:
- the main window to have a tab widget with pages
- previous CompEditor to PopupEditor

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,13 @@ tests/test_models/__pycache__/
 __pycache__/
 
 core/components/__init__.py
+
+windows/pages/__init__.py
+
+windows/pages/comp_page/__init__.py
+
+.qt_for_python/
+
+windows/pages/comp_page/comp_editor/__init__.py
+
+windows/pages/comp_page/popup_editor/__init__.py
