Implemented subtypes of components, tag anddynamic popup editor
created:
- type, status and manufacture enums
- info containers class, with subclasses purchasable component info and general component info
- base component and sub components classes
- tag class
- switchable combobox widget
- component factory

implemented:
- dynamic popup editor
- data actions

removed:
- CompModel.get_components_list
- Component.get_subtree_components

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ windows/pages/comp_page/__init__.py
 windows/pages/comp_page/comp_editor/__init__.py
 
 windows/pages/comp_page/popup_editor/__init__.py
+
+windows/widgets/__init__.py
+
+windows/widgets/switchable_combobox/__init__.py
